[package]
name = "rsbtserver"
version = "0.1.0"
authors = ["maccam912 <maccam912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsbacktester = { git = "https://github.com/maccam912/rsbacktester" }
rocket = "0.4.5"